# Personal-Assistant-SION

./: .gitignore  README.md  docker-compose.yml  requirements.txt
aws/cloudformation/: infrastructure.yaml
aws/ec2/: deploy.sh  user_data.sh
aws/ecr/: push_images.sh
aws/lambda/calendar_handler/: lambda_function.py  requirements.txt
aws/lambda/email_handler/: lambda_function.py  requirements.txt
backend/asr/: Dockerfile  requirements.txt
backend/asr/app/: __init__.py  main.py  model.py  schemas.py
backend/asr/models/: .gitkeep
backend/nlu/: Dockerfile  requirements.txt
backend/nlu/app/: __init__.py  (+3 more)
backend/task_executor/: Dockerfile  requirements.txt
client/app/: __init__.py  google_services.py  llm_agent.py  main.py
client/cpp/: CMakeLists.txt
client/cpp/include/: audio_capture.h  hotkey_handler.h  python_bridge.h
client/cpp/src/: audio_capture.cpp  hotkey_handler.cpp  main.cpp  python_bridge.cpp
client/python/: __init__.py  api_client.py  audio_recorder.py  config.py  main.py
configs/: env.example  settings.yaml
docs/: api_reference.md  architecture.md
scripts/: run_local.sh  setup_dev.sh
tests/: __init__.py  conftest.py
tests/test_asr/: __init__.py  test_model.py
tests/test_nlu/: __init__.py  test_intent_classifier.py
tests/test_tasks/: __init__.py  test_llm_task.py
voice/: INTEGRATION_GUIDE.md  README.md  config.yaml  requirements.txt  xtts_server.py
voice/app/: __init__.py  api_server.py  audio_utils.py  sion_integration.py  tts_service.py  voice_cloner.py  xtts_service.py
voice/scripts/: inference.py  prepare_data.py  train.py
(+10 files in other folders)
